--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,13 @@ bin-release/
 *.air
 *.ipa
 *.apk
+*.exe
+*.dll
+*.pdb
+*.db
+*.bin
+
+Saved/
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
